--- a/04-Objetos/index.html
+++ b/04-Objetos/index.html
@@ -20,8 +20,9 @@
         </ul>
       </div>
     </main>
-    <script src=""></script>;
-    <script src=""></script>;
-    <script src="scriptNative.js"></script>;
+    <script src=""></script>                  <!-scriptConstructor.js//->
+    <script src=""></script>                  <!-scriptPrototype.js//->
+    <script src=""></script>                  <!-scriptConstructor.js//->
+    <script src="scriptArray.js"></script>    <!-scriptArray.js//->
   </body>
 </html>
