--- a/04-Objetos/index.html
+++ b/04-Objetos/index.html
@@ -11,18 +11,46 @@
       <div class="titulo"><h1>Objetos</h1></div>
       <div><h2>Subtitulo</h2></div>
       <div>
-        <ul>
-          <li>Linha1</li>
-          <li>Linha2</li>
-          <li>Linha3</li>
-          <li>Linha4</li>
-          <li>Linha5</li>
+        <section class="curso">
+          <h1>Web Design Completo</h1>
+          <h4>Este curso é para quem deseja entrar ou já está no mercado de criação de websites.</h4>
+          <span class="aulas">80</span>
+          <span class="horas">22</span>
+        </section>
+        <section class="curso">
+          <h1>WordPress Como CMS</h1>
+          <h4>No curso de WordPress Como CMS, você aprende do zero como pegar qualquer site em HTML e torná-lo totalmente gerenciável com a plataforma do WordPress.</h4>
+          <span class="aulas">46</span>
+          <span class="horas">9</span>
+        </section>
+        <section class="curso">
+          <h1>UI Design Avançado</h1>
+          <h4>Este é um curso avançado de User Interface Design.</h4>
+          <span class="aulas">55</span>
+          <span class="horas">15</span>
+        </section>
+      </div>
+      <div>
+        <section class="exercicio">
+          <p>Lobo-cinzento (nome científico:Canis lupus) é uma espécie de mamífero canídeo do gênero Canis. É um sobrevivente da Era do Gelo, originário do Pleistoceno Superior, cerca de 300 mil anos atrás. É o maior membro remanescente selvagem da família canidae.</p>
+          <p>Os lobos-cinzentos são tipicamente predadores ápice nos ecossistemas que ocupam. Embora não sejam tão adaptáveis à presença humana como geralmente ocorre com as demais.</p>
+          <p>O peso e tamanho dos lobos variam muito em todo o mundo, tendendo a aumentar proporcionalmente com a latitude.</p>
+          <p>Os lobos são capazes de percorrer longas distâncias com uma velocidade média de 10 quilômetros por hora e são conhecidos por.</p>
+        </section>        
+      </div>
+      <div>
+        <ul class="lista">
+          <li>Item 1 da lista</li>
+          <li>Item 2 da lista</li>
+          <li>Item 3 da lista</li>
+          <li>Item 4 da lista</li>
         </ul>
       </div>
     </main>
     <script src=""></script>                  <!-scriptConstructor.js//->
     <script src=""></script>                  <!-scriptPrototype.js//->
     <script src=""></script>                  <!-scriptConstructor.js//->
-    <script src="scriptArray.js"></script>    <!-scriptArray.js//->
+    <script src=""></script>                  <!-scriptArray.js//->
+    <script src="scriptFunction.js"></script>  <!-scriptArray.js//->
   </body>
 </html>
