Novo app coutdonw

--- a/05-EfeitosNoDom/modules-intro/index.html
+++ b/05-EfeitosNoDom/modules-intro/index.html
@@ -28,10 +28,11 @@
                 <li><a href="empresa.html">Equipe</a></li>
                 <li><a href="empresa.html">Socios</a></li>
                 <li><a href="empresa.html">Investidores</a></li>
-                <li><a href="cronometro.html">Cronometro</a></li>
-                <li><a href="formulario.html">Fórmulario</a></li>
-                <li><a href="buttonCreator.html">Button Creator</a></li>
-                <li><a href="fetch.html">Fetch</a></li>
+                <li><a href="./pages/cronometro.html">Cronometro</a></li>
+                <li><a href="./pages/formulario.html">Fórmulario</a></li>
+                <li><a href="./pages/buttonCreator.html">Button Creator</a></li>
+                <li><a href="./pages/fetch.html">Fetch</a></li>
+                <li><a href="./pages/coutdown.html">Coutdown</a></li>
               </ul>
             </li>
             <li><a href="#faq">Faq</a></li>
@@ -122,24 +123,7 @@
 
         <section class="grid-section numeros" data-anime="scroll">
           <h1 class="titulo">Números</h1>
-          <div class="numeros-grid">
-            <div class="numero-animal">
-              <h3>Lobos</h3>
-              <span data-numero>4874</span>
-            </div>
-            <div class="numero-animal">
-              <h3>Raposas</h3>
-              <span data-numero>578</span>
-            </div>
-            <div class="numero-animal">
-              <h3>Esquilos</h3>
-              <span data-numero>10589</span>
-            </div>
-            <div class="numero-animal">
-              <h3>Ursos</h3>
-              <span data-numero>1862</span>
-            </div>
-          </div>
+          <div class="numeros-grid"></div>
         </section>
       
         <section class="grid-section contato" data-anime="scroll" id="contato">
@@ -152,6 +136,7 @@
             <li>+55 (62) 99595-5959</li>
             <li>Rua Vinte e Oito, nº 11</li>
             <li>Goiânia - GO</li>
+            <li>Doe <span class="btc-preco">0</span> Bitcoin para nos ajudar</li>
             <li data-semana="1,2,3,4,5" data-horario="8,18" >Segunda a sexta das 08 às 18</li>
           </ul>
         </section>
